# sales-taxes-problem

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
sales-taxes-problem/: main.py
tests/: test_simple.py
